Bug 533208 - Only call [NSCursor hide/unhide] when cursor visibility actually changes, since these calls must be balanced. r=josh